--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=demo
+spring.datasource.url=jdbc:postgresql://localhost:5432/notes_app
+spring.datasource.username=cireneu
+spring.datasource.password=pass
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=create
